--- a/DebugSerial/examples/DualGraph/Term.ui
+++ b/DebugSerial/examples/DualGraph/Term.ui
@@ -33,6 +33,22 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnClose">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>140</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Close</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
