--- a/DebugSerial/Box.ui
+++ b/DebugSerial/Box.ui
@@ -20,6 +20,26 @@
    <property name="focusPolicy">
     <enum>Qt::NoFocus</enum>
    </property>
+   <widget class="QTextEdit" name="textEditTx">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>291</width>
+      <height>351</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEditRx">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>10</y>
+      <width>311</width>
+      <height>351</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
