--- a/TimerDriven/Grap.ui
+++ b/TimerDriven/Grap.ui
@@ -35,6 +35,9 @@
     </item>
     <item row="2" column="1">
      <widget class="QSlider" name="slider">
+      <property name="minimum">
+       <number>100</number>
+      </property>
       <property name="maximum">
        <number>5000</number>
       </property>
