--- a/DebugSerial/dsUis/Plot.ui
+++ b/DebugSerial/dsUis/Plot.ui
@@ -38,7 +38,7 @@
   <customwidget>
    <class>QwtPlot</class>
    <extends>QFrame</extends>
-   <header>qwt_plot.h</header>
+   <header>PyQt4.Qwt5.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
