--- a/DebugSerial/dsUis/Menu.ui
+++ b/DebugSerial/dsUis/Menu.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>281</width>
-    <height>157</height>
+    <height>223</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,13 +15,6 @@
   </property>
   <widget class="QWidget" name="Menu">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QPushButton" name="btnRadi">
-      <property name="text">
-       <string>Radix</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QPushButton" name="btnTerm">
       <property name="text">
@@ -29,10 +22,10 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="btnGrap">
+    <item row="6" column="1">
+     <widget class="QPushButton" name="btnReset">
       <property name="text">
-       <string>Graph</string>
+       <string>Reset</string>
       </property>
      </widget>
     </item>
@@ -43,10 +36,17 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QPushButton" name="btnScri">
+    <item row="2" column="0">
+     <widget class="QPushButton" name="btnGrap">
       <property name="text">
-       <string>Script</string>
+       <string>Graph</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="btnRadi">
+      <property name="text">
+       <string>Radix</string>
       </property>
      </widget>
     </item>
@@ -57,22 +57,29 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QLabel" name="labelBaud">
+    <item row="4" column="0">
+     <widget class="QPushButton" name="btnImag">
+      <property name="text">
+       <string>Imager</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QPushButton" name="btnScri">
+      <property name="text">
+       <string>Script</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="labelReset">
       <property name="text">
        <string>TextLabel</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
-     <widget class="QPushButton" name="btnReset">
-      <property name="text">
-       <string>Reset</string>
-      </property>
-     </widget>
-    </item>
     <item row="2" column="1">
-     <widget class="QLabel" name="labelReset">
+     <widget class="QLabel" name="labelBaud">
       <property name="text">
        <string>TextLabel</string>
       </property>
